--- a/admin/Tpl/default/Scratch/index.html
+++ b/admin/Tpl/default/Scratch/index.html
@@ -91,7 +91,8 @@
 			,type|change_type:消费类型
 			,parti_num:参与人数
 			,parti_score:参与金额
-			,stock|calculate_stock=$scratch:库存
+			,stock:库存
+			,initial_stock:干预库存
 			,create_time|change_create_time:创建时间
 		 	,is_effect|get_toogle_status=$scratch['id']#is_effect:有效"
             actionlist="id|get_handle=$scratch" />
