--- a/admin/Tpl/default/IncomeBalance/duobao.html
+++ b/admin/Tpl/default/IncomeBalance/duobao.html
@@ -30,6 +30,16 @@
 </div>
 </form>
 <div class="blank5"></div>
+	<html:list
+			id="dataTable"
+			style="dataTable"
+			name="duobao_item"
+			datasource="total"
+			show="id:期号|50px
+
+			,origin_price|format_price:总计成本价格
+"
+	/>
 <html:list 
 	id="dataTable" 
 	style="dataTable" 
