--- a/admin/Tpl/default/IncomeBalance/gauguale.html
+++ b/admin/Tpl/default/IncomeBalance/gauguale.html
@@ -33,6 +33,21 @@
 			id="dataTable"
 			style="dataTable"
 			name="duobao_item"
+			datasource="total"
+			show="id:期号|50px
+			,jinbi:总中奖金币
+			,zuanshi:总中奖钻石
+			,shangpin:总中奖实物价值
+			,money:总消费金币
+			,jewel:总消费钻石
+			,coupons:总消费优惠券
+			,fenxiao:总分销金额
+		 	"
+	/>
+	<html:list
+			id="dataTable"
+			style="dataTable"
+			name="duobao_item"
 			datasource="list"
 			show="id:期号|50px
 			,username:用户名
