--- a/admin/Tpl/default/IncomeBalance/duobao.html
+++ b/admin/Tpl/default/IncomeBalance/duobao.html
@@ -36,7 +36,7 @@
 			name="duobao_item"
 			datasource="total"
 			show="id:期号|50px
-
+			,max_buy:参与人次
 			,origin_price|format_price:总计成本价格
 "
 	/>
